Finish Task 3.4